--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
 body {
     margin: 60px auto;
+    height: 100%;
     background-image: url('../image/garden.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -27,6 +28,7 @@ body {
     margin: 0 auto;
     background-color: rgba(49, 40, 40, 0.322);
     width: 800px;
+    height: 100%;
     border-radius: 90px/30px;
 }
 
@@ -34,21 +36,25 @@ body {
 aside {
     display: flex;
     flex-basis: 320px;
+    height: 850px;
     align-items: center;
-    /* justify-content: center; */
     flex-direction: column;
 }
 
+aside img:first-child {
+    margin-top: 40px;
+}
+
 .logo {
-    margin-top: 130px;
+    margin-top: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: rgb(204, 172, 195);
-    width: 300px;
+    width: 280px;
     height: 80px;
     text-shadow: 2px 2px #0f0f0f;
-    font-size: 28px;
+    font-size: 26px;
     margin-bottom: 20px;
     background-color: rgb(13, 50, 92);
     border-radius: 30px 60px 90px;
@@ -67,9 +73,6 @@ aside button {
     font-size: 25px;
     font-weight: 800;
     background-color: rgb(204, 172, 195);
-    /* background-image: url('../image/gradient-red.jpg'); */
-    background-size: cover;
-    /* background-color: #F7C331; */
     color: rgb(13, 50, 92);
     text-shadow: 2px 2px #a9b3c0;
     text-align: center;
@@ -129,16 +132,14 @@ main {
     margin: 0 auto;
     position: relative;
     width: 420px;
-    height: 630px;
+    height: 100%;
     border-radius: 90px/30px;
     border: 4px solid rgb(209, 214, 219);
 }
 
-
 .create-player-menu {
     display: none;
     margin: 0 auto;
-    height: 630px;
     color: rgb(17, 12, 12);
     letter-spacing: 2px;
     font-size: 15px;
@@ -248,15 +249,35 @@ h2 {
 }
 
 .read-me {
+    position: relative;
     display: none;
+    height: 100%;
     width: 420px;
-    height: 630px;
     padding: 30px;
+    padding-right: 10px;
+    color: rgb(233, 231, 116);
+    text-shadow: 2px 2px #1a1a1b;
+    font-size: 18px
 }
 
-img {
-    width: 70px;
+.read-me h1{
+    margin-bottom: 20px;
+    color: rgb(168, 140, 177);
+    text-shadow: 2px 2px #1a1a1b;
 }
+
+.read-me p{
+    padding-bottom: 5px;
+}
+
+.read-me div{
+    bottom: 20px;
+    padding-left: 40px;
+    position: absolute;
+}
+
+
+
 /* -----------------------Footer------------------------------ */
 footer {
     display: flex;
@@ -315,9 +336,8 @@ footer {
 
 /* ================ Main Aria ================ */
 
-
-
 .move {
+    cursor: pointer;
     margin: 0 10px;
     width: 50px;
     background-size: cover;
@@ -349,4 +369,17 @@ footer {
 
 .animation-7 {
     animation-duration: 7s;
+}
+
+.flash-button{
+	animation-name: flash;
+	animation-duration: 1s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+
+@keyframes flash {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.5; }
+    100% { opacity: 1.0; }
 }
